--- a/Making_the_Most_of_your_Colab_Subscription.ipynb
+++ b/Making_the_Most_of_your_Colab_Subscription.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Making the Most of your Colab Subscription",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/OstapHembara-priv/Programming/blob/main/Making_the_Most_of_your_Colab_Subscription.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -49,9 +35,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "23TOba33L4qf"
       },
+      "outputs": [],
       "source": [
         "gpu_info = !nvidia-smi\n",
         "gpu_info = '\\n'.join(gpu_info)\n",
@@ -59,9 +47,7 @@
         "  print('Not connected to a GPU')\n",
         "else:\n",
         "  print(gpu_info)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -91,21 +77,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "V1G82GuO-tez"
       },
+      "outputs": [],
       "source": [
         "from psutil import virtual_memory\n",
         "ram_gb = virtual_memory().total / 1e9\n",
         "print('Your runtime has {:.1f} gigabytes of available RAM\\n'.format(ram_gb))\n",
         "\n",
         "if ram_gb < 20:\n",
-        "  print('Not using a high-RAM runtime')\n",
+        "  print('Not using a high-RAM piska')\n",
         "else:\n",
         "  print('You are using a high-RAM runtime!')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,5 +185,19 @@
         "- [Video Interpolation](https://tensorflow.org/hub/tutorials/tweening_conv3d): Predict what happened in a video between the first and the last frame.\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Making the Most of your Colab Subscription",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
